--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
   </head>
   <body>
     <h1>Welcome to Lisbon</h1>
+    <footer>
+      This project was coded by Roxana Stoian and is
+      <a href="https://github.com/roxanastoian/travel-project-lisbon-">
+        open-sourced</a
+      >.
+    </footer>
   </body>
 </html>
