--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to Lisbon</h1>
-    <footer>
-      This project was coded by Roxana Stoian and is
-      <a href="https://github.com/roxanastoian/travel-project-lisbon-">
-        open-sourced</a
-      >.
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.travel.</h3>
+        <h1>Welcome to Lisbon</h1>
+        <h2>Capital city of Portugal</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Roxana Stoian and is
+        <a href="https://github.com/roxanastoian/travel-project-lisbon-">
+          open-sourced</a
+        >.
+      </footer>
+    </div>
   </body>
 </html>
