--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
           <h3 class="text-center">My favorite cafés in Lisbon</h3>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="cafes/cafe-janis.png"
                   alt="cafe-janis"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.4424670709063!2d-9.149830224072328!3d38.7076492717652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193480cb12c5bd%3A0xca7504cb134f1942!2sCaf%C3%A9%20Janis!5e0!3m2!1sen!2suk!4v1695065650019!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Café Janis</h4>
@@ -80,7 +88,7 @@
                 </p>
                 <div class="card-footer">
                   <a
-                    href="https://www.facebook.com/cafejanislisboa/?locale=en_GB"
+                    href="https://maps.app.goo.gl/LxsTrgqi6LY8vpKE8"
                     target="_blank"
                     class="btn"
                     >Learn more</a
@@ -89,12 +97,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="cafes/cafe-seagull-method.png"
                   alt="cafe-seagull-method"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.138171496012!2d-9.150035899999983!3d38.714636600000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19333a2feac5bf%3A0x428bc0902a2efc3e!2sSeagull%20Method%20cafe%20%E2%80%A2%20Brunch%20cafe!5e0!3m2!1sen!2suk!4v1695066413884!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Seagull Method Café</h4>
@@ -112,7 +128,7 @@
                 </p>
                 <div class="card-footer">
                   <a
-                    href="https://www.facebook.com/seagullmethod/"
+                    href="https://maps.app.goo.gl/a1WfvySbnwSYQZts7"
                     target="_blank"
                     class="btn"
                     >Learn more</a
@@ -121,12 +137,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="cafes/cafe-heim.png"
                   alt="cafe-heim"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.45093558248!2d-9.15650160000001!3d38.7074548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193483527ff2db%3A0x6e83c1d32370310c!2sHeim%20Cafe%20%E2%80%A2%20Brunch%20and%20Breakfast%20%E2%80%A2!5e0!3m2!1sen!2suk!4v1695066483550!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Heim Café</h4>
@@ -144,7 +168,7 @@
                 </p>
                 <div class="card-footer">
                   <a
-                    href="https://www.facebook.com/heim.lisbon/?locale=en_GB"
+                    href="https://maps.app.goo.gl/jsfQma2uEPDC64ca7"
                     target="_blank"
                     class="btn"
                     >Learn more</a
